--- a/isaac_ros_nvengine/CMakeLists.txt
+++ b/isaac_ros_nvengine/CMakeLists.txt
@@ -98,7 +98,7 @@ install(TARGETS "test_publish_tensor"
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
 
-  # Ignore copyright notices since we use custom JetPack EULA
+  # Ignore copyright notices since we use custom NVIDIA Isaac ROS Software License
   set(ament_cmake_copyright_FOUND TRUE)
 
   ament_lint_auto_find_test_dependencies()
