--- a/isaac_ros_nvengine/package.xml
+++ b/isaac_ros_nvengine/package.xml
@@ -17,8 +17,8 @@ license agreement from NVIDIA CORPORATION is strictly prohibited.
   <description>NVEngine support for Isaac ROS</description>
 
   <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer>
-  <license>JetPack EULA</license>
-  <url type="website">https://developer.nvidia.com/blog/accelerating-ai-modules-for-ros-and-ros-2-on-jetson/</url>
+  <license>NVIDIA Isaac ROS Software License</license>
+  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
   <author>Ethan Yu</author>
   <author>Herón Ordóñez Guillén</author>
   <author>Isaac Chang</author>
