--- a/docker/Dockerfile.x86_64.base
+++ b/docker/Dockerfile.x86_64.base
@@ -137,7 +137,8 @@ RUN apt update \
     && apt-key adv --keyserver keys.gnupg.net --recv-key F6E65AC044F831AC80A06380C8B3A55A6F3EFCDE \
     || apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-key F6E65AC044F831AC80A06380C8B3A55A6F3EFCDE \
     && add-apt-repository -y "deb https://librealsense.intel.com/Debian/apt-repo bionic main" -u \
-    && apt-get install -y librealsense2-utils librealsense2-dev
+    && apt-get install -y librealsense2-utils librealsense2-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 # Install Tao converter
 RUN mkdir -p /opt/nvidia/tao && \
