--- a/isaac_ros_test/package.xml
+++ b/isaac_ros_test/package.xml
@@ -24,6 +24,7 @@ license agreement from NVIDIA CORPORATION is strictly prohibited.
   <author>Jaiveer Singh</author>
 
   <depend>cv_bridge</depend>
+  <depend>isaac_ros_apriltag_interfaces</depend>
 
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
