--- a/isaac_ros_apriltag_interfaces/package.xml
+++ b/isaac_ros_apriltag_interfaces/package.xml
@@ -20,6 +20,7 @@ license agreement from NVIDIA CORPORATION is strictly prohibited.
   <author>Arjun Bhorkar</author>
   <author>Hemal Shah</author>
 
+  <build_depend>ament_cmake_auto</build_depend>
   <build_depend>rosidl_default_generators</build_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
 
