--- a/docker/Dockerfile.nav2
+++ b/docker/Dockerfile.nav2
@@ -12,7 +12,7 @@ FROM ${BASE_IMAGE}
 # Install nav2
 RUN apt-get update && mkdir -p ${ROS_ROOT}/src && cd ${ROS_ROOT}/src \
     && git clone https://github.com/ros-planning/navigation2.git && cd navigation2 && git checkout humble && cd .. \    
-    && git clone https://github.com/BehaviorTree/BehaviorTree.CPP.git && cd BehaviorTree.CPP && git checkout master && cd .. \
+    && git clone https://github.com/BehaviorTree/BehaviorTree.CPP.git && cd BehaviorTree.CPP && git checkout a363bdcae88350bc748598a7d2950e300859469c && cd .. \
     && source ${ROS_ROOT}/setup.bash && cd ${ROS_ROOT} \
     && rosdep install -y -r --ignore-src --from-paths src --rosdistro ${ROS_DISTRO} \
     && colcon build --merge-install --cmake-args -DCMAKE_BUILD_TYPE=RelWithDebInfo --packages-up-to-regex nav2* --packages-ignore nav2_system_tests \
