--- a/docker/Dockerfile.humble
+++ b/docker/Dockerfile.humble
@@ -30,10 +30,8 @@ RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/r
 # ROS fundamentals
 RUN apt-get update && apt-get install -y \
         build-essential \
-        cmake \
         git \
         python3-colcon-common-extensions \
-        python3-flake8 \
         python3-pip \
         python3-pybind11 \
         python3-pytest-cov \
@@ -60,10 +58,15 @@ RUN python3 -m pip install -U \
         pytest \
         setuptools
 
+# Avoid setup.py and easy_install deprecation warnings caused by colcon and setuptools
+# https://github.com/colcon/colcon-core/issues/454
+ENV PYTHONWARNINGS=ignore:::setuptools.command.install,ignore:::setuptools.command.easy_install,ignore:::pkg_resources
+RUN echo "Warning: Using the PYTHONWARNINGS environment variable to silence setup.py and easy_install deprecation warnings caused by colcon"
+
 ENV ROS_DISTRO=humble
 ENV ROS_ROOT=/opt/ros/${ROS_DISTRO}
 
-# Build ROS2 core from source source
+# Build ROS2 core from source
 RUN mkdir -p ${ROS_ROOT}/src && \
     cd ${ROS_ROOT} && \
     # https://answers.ros.org/question/325245/minimal-ros2-installation/?answer=325249#post-id-325249
@@ -115,8 +118,8 @@ RUN cd ${ROS_ROOT} \
       --from-paths src \
       --rosdistro ${ROS_DISTRO} \
       --skip-keys "fastcdr rti-connext-dds-6.0.1 rti-connext-dds-5.3.1 urdfdom_headers libopencv-dev libopencv-contrib-dev libopencv-imgproc-dev python-opencv python3-opencv" \
-&& rm -Rf /var/lib/apt/lists/* \
-&& apt-get clean
+    && rm -Rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 # Build ROS2 source
 RUN cd ${ROS_ROOT} \
@@ -137,5 +140,5 @@ RUN apt-get update && mkdir -p ${ROS_ROOT}/src && cd ${ROS_ROOT}/src \
     && rosdep install -y -r --ignore-src --from-paths src --rosdistro ${ROS_DISTRO} \
     && colcon build --merge-install --cmake-args -DCMAKE_BUILD_TYPE=RelWithDebInfo --packages-up-to-regex negotiated* \
     && rm -Rf src logs build \
-&& rm -rf /var/lib/apt/lists/* \
-&& apt-get clean
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
