--- a/docker/Dockerfile.x86_64
+++ b/docker/Dockerfile.x86_64
@@ -51,7 +51,6 @@ RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 1
 
 # Python basics
 RUN apt-get update && apt-get install -y \
-        python3-flake8 \        
         python3-pip \
         python3-pybind11 \
         python3-pytest-cov \
@@ -78,18 +77,12 @@ RUN apt-get update && apt-get install -y \
         python3-opencv \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
-
-# Pytorch
-RUN python3 -m pip install -U --extra-index-url https://download.pytorch.org/whl/cu113 \
-        torch \
-        torchvision \
-        torchaudio
         
 # Python3 (PIP)
 RUN python3 -m pip install -U \
         argcomplete \
         autopep8 \
-        flake8 \
+        flake8==4.0.1 \
         flake8-blind-except \
         flake8-builtins \
         flake8-class-newline \
@@ -112,12 +105,13 @@ RUN curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.d
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
-# CMake
-RUN wget -qO - https://apt.kitware.com/keys/kitware-archive-latest.asc | apt-key add - && \
-    apt-add-repository "deb https://apt.kitware.com/ubuntu/ $(lsb_release -cs) main" && \
-    apt-get update && \
-    apt-get install -y --no-install-recommends --only-upgrade \
-            cmake \
+# Upgrade cmake to 3.23.2
+RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null \
+    && echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null \
+    && apt-get update \
+    && apt-get update \
+    && apt-get remove -y cmake && apt-get purge -y cmake && apt-get remove -y cmake-data && apt-get purge -y cmake \
+    && apt-get install -y cmake=3.23.2-0kitware1ubuntu20.04.1 cmake-data=3.23.2-0kitware1ubuntu20.04.1 \
     && cmake --version \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean 
@@ -133,12 +127,18 @@ RUN apt-get update && apt-get install -y \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
+# Pytorch
+RUN python3 -m pip install -U --extra-index-url https://download.pytorch.org/whl/cu113 \
+        torch \
+        torchvision \
+        torchaudio
+
 # Install VPI packages
 ARG HAS_GPU="true"
 RUN if [ "$HAS_GPU" = "true" ]; then \
 	set -e ; \
         apt-key adv --fetch-key https://repo.download.nvidia.com/jetson/jetson-ota-public.asc ; \
-        add-apt-repository 'deb http://repo.download.nvidia.com/jetson/x86_64/focal r34.1 main' ; \
+        add-apt-repository 'deb http://repo.download.nvidia.com/jetson/x86_64/focal r35.1 main' ; \
         apt-get update ; \
         apt-get install libnvvpi2 vpi2-dev ; \
         rm -rf /var/lib/apt/lists/* ; \
