--- a/isaac_ros_bi3d_interfaces/package.xml
+++ b/isaac_ros_bi3d_interfaces/package.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
-
 <!--
-Copyright (c) 2021-2022, NVIDIA CORPORATION.  All rights reserved.
+Copyright (c) 2022, NVIDIA CORPORATION.  All rights reserved.
 
 NVIDIA CORPORATION and its licensors retain all intellectual property
 and proprietary rights in and to this software, related documentation
@@ -9,27 +8,28 @@ and any modifications thereto.  Any use, reproduction, disclosure or
 distribution of this software and related documentation without an express
 license agreement from NVIDIA CORPORATION is strictly prohibited.
 -->
-
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>isaac_ros_test</name>
+  <name>isaac_ros_bi3d_interfaces</name>
   <version>0.11.0</version>
-  <description>Isaac ROS testing utilities</description>
+  <description>Interfaces for Isaac ROS Bi3D</description>
 
   <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer>
   <license>NVIDIA Isaac ROS Software License</license>
   <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
-  <author>Ethan Yu</author>
-  <author>Isaac Chang</author>
-  <author>Jaiveer Singh</author>
+  <author>Peter Du</author>
 
-  <depend>cv_bridge</depend>
+  <build_depend>rosidl_default_generators</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
-  <test_depend>ament_flake8</test_depend>
-  <test_depend>ament_pep257</test_depend>
-  <test_depend>python3-pytest</test_depend>
+  <depend>std_msgs</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
