Isaac ROS 0.30.0 (DP3)

--- a/docker/Dockerfile.realsense
+++ b/docker/Dockerfile.realsense
@@ -8,3 +8,10 @@ COPY scripts/install-realsense-dependencies.sh /opt/realsense/install-realsense-
 
 RUN chmod +x /opt/realsense/install-realsense-dependencies.sh && /opt/realsense/install-realsense-dependencies.sh
 RUN chmod +x /opt/realsense/build-librealsense.sh && /opt/realsense/build-librealsense.sh
+
+# Copy hotplug script which will get invoked whenever a devices plugged or un-plugged
+RUN mkdir -p /opt/realsense/
+COPY scripts/hotplug-realsense.sh /opt/realsense/hotplug-realsense.sh
+
+# Copy custom udev rules file
+COPY udev_rules/99-realsense-libusb-custom.rules /etc/udev/rules.d/99-realsense-libusb-custom.rules
