--- a/isaac_ros_pointcloud_interfaces/CMakeLists.txt
+++ b/isaac_ros_pointcloud_interfaces/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2021, NVIDIA CORPORATION.  All rights reserved.
+# Copyright (c) 2023, NVIDIA CORPORATION.  All rights reserved.
 #
 # NVIDIA CORPORATION and its licensors retain all intellectual property
 # and proprietary rights in and to this software, related documentation
@@ -7,7 +7,7 @@
 # license agreement from NVIDIA CORPORATION is strictly prohibited.
 
 cmake_minimum_required(VERSION 3.23.2)
-project(isaac_ros_common LANGUAGES C CXX)
+project(isaac_ros_pointcloud_interfaces)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -16,23 +16,13 @@ endif()
 find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
 
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/isaac_ros_common-extras.cmake)
-
-# Dependencies
-find_package(vpi REQUIRED)
-
-# vpi utilities
-ament_auto_add_library(${PROJECT_NAME} SHARED
-  src/vpi_utilities.cpp
+# Prepare custom test interfaces
+find_package(rosidl_default_generators REQUIRED)
+rosidl_generate_interfaces(${PROJECT_NAME}
+  msg/FlatScan.msg
+  DEPENDENCIES builtin_interfaces std_msgs
 )
-target_link_libraries(${PROJECT_NAME} vpi)
-
-# Register cmake in install.
-ament_index_register_resource(isaac_ros_common_cmake_path CONTENT
-    "${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}/cmake")
-list(APPEND ${PROJECT_NAME}_CONFIG_EXTRAS
-  cmake/isaac_ros_common-extras.cmake
-  cmake/isaac_ros_common-extras-modules.cmake)
+ament_export_dependencies(rosidl_default_runtime)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -42,4 +32,4 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-ament_auto_package(INSTALL_TO_SHARE cmake)
+ament_auto_package()
