--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+# Ignore Python files in linguist
+*.py linguist-detectable=false
+
 # Images
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
@@ -17,9 +20,9 @@
 *.so.* filter=lfs diff=lfs merge=lfs -text
 
 # ROS Bags
+**/resources/**/*.zstd filter=lfs diff=lfs merge=lfs -text
 **/resources/**/*.db3 filter=lfs diff=lfs merge=lfs -text
 **/resources/**/*.yaml filter=lfs diff=lfs merge=lfs -text
 
 # trtexec
 trtexec_x86_64 filter=lfs diff=lfs merge=lfs -text
-
