--- a/docker/Dockerfile.aarch64
+++ b/docker/Dockerfile.aarch64
@@ -7,19 +7,20 @@
 # license agreement from NVIDIA CORPORATION is strictly prohibited.
 
 # Docker file for aarch64 based Jetson device
-ARG BASE_IMAGE="nvcr.io/nvidia/l4t-base:r35.1.0"
+ARG BASE_IMAGE="nvcr.io/nvidia/l4t-base:r35.2.1"
 FROM ${BASE_IMAGE}
 
 # Disable terminal interaction for apt
 ENV DEBIAN_FRONTEND=noninteractive
 ENV SHELL /bin/bash
-SHELL ["/bin/bash", "-c"] 
+SHELL ["/bin/bash", "-c"]
 
 # Fundamentals
 RUN apt-get update && apt-get install -y \
     build-essential \
     curl \
     git \
+    iputils-ping \
     lsb-release \
     sudo \
     tar \
@@ -48,10 +49,10 @@ RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 1
 
 # Python basics
 RUN apt-get update && apt-get install -y \
+        python3-dev \
         python3-flake8 \
         python3-pip \
         python3-pytest-cov \
-        python3-setuptools \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
@@ -71,7 +72,7 @@ RUN apt-get update && apt-get install -y \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
-# Install additional packages needed for ROS2 dependencies
+# Install additional packages needed for ROS 2 dependencies
 RUN apt-get update && apt-get install -y \
     python3-distutils \
     libboost-all-dev \
@@ -125,7 +126,7 @@ RUN apt-get update && apt-get install -y \
 # Install tao-converter
 COPY tao/tao-converter-aarch64-tensorrt8.4.zip /opt/nvidia/tao/tao-converter-aarch64-tensorrt8.4.zip
 RUN mkdir -p /opt/nvidia/tao && \
-    cd /opt/nvidia/tao && \    
+    cd /opt/nvidia/tao && \
     unzip -j tao-converter-aarch64-tensorrt8.4.zip -d /opt/nvidia/tao/jp5 && \
     chmod 755 $(find /opt/nvidia/tao -name "tao-converter") && \
     ln -sf $(find /opt/nvidia/tao -name "tao-converter")  /opt/nvidia/tao/tao-converter && \
@@ -138,6 +139,7 @@ ENV LD_LIBRARY_PATH="/opt/nvidia/vpi2/lib64:${LD_LIBRARY_PATH}"
 ENV LD_LIBRARY_PATH="/usr/lib/aarch64-linux-gnu/tegra:${LD_LIBRARY_PATH}"
 ENV LD_LIBRARY_PATH="/usr/local/cuda-11.4/targets/aarch64-linux/lib:${LD_LIBRARY_PATH}"
 ENV LD_LIBRARY_PATH="/usr/lib/aarch64-linux-gnu/tegra-egl:${LD_LIBRARY_PATH}"
+ENV LD_LIBRARY_PATH="/usr/lib/aarch64-linux-gnu/tegra/weston:${LD_LIBRARY_PATH}"
 ENV LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/lib/aarch64-linux-gnu-host"
 ENV PATH="${PATH}:/usr/local/cuda/bin"
 
@@ -184,15 +186,15 @@ RUN apt-add-repository ppa:mosquitto-dev/mosquitto-ppa \
 RUN python3 -m pip install -U \
   pymongo \
   paho-mqtt
-  
+
 # Core dev libraries
 RUN apt-get update && apt-get install -y \
         libasio-dev \
         libbullet-dev \
         libtinyxml2-dev \
         libcunit1-dev \
-        libopencv-dev \
-        python3-opencv \
+        libopencv-dev=4.2.0+dfsg-5 \
+        python3-opencv=4.2.0+dfsg-5 \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
@@ -204,7 +206,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Upgrade libc to resolve vulnerabilities including CVE-2019-11477
 RUN apt-get update && apt-get install -y --only-upgrade \
-       linux-libc-dev \      
+       linux-libc-dev \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
@@ -215,3 +217,7 @@ RUN python3 -m pip install \
 # GPU usage monitoring on Jetson
 RUN python3 -m pip install -U \
   jetson-stats
+
+# Apply libcudacxx patch for fixing C++17 compilation errors in GXF
+COPY patches/libcudacxx_aarch64_cuda_11_4.diff /tmp/
+RUN patch -i /tmp/libcudacxx_aarch64_cuda_11_4.diff /usr/local/cuda-11.4/targets/aarch64-linux/include/cuda/std/detail/libcxx/include/cmath
