--- a/docker/Dockerfile.x86_64
+++ b/docker/Dockerfile.x86_64
@@ -8,13 +8,13 @@
 #
 # Docker file to build on x86_64
 # https://docs.nvidia.com/deeplearning/frameworks/user-guide/index.html
-ARG BASE_IMAGE=nvcr.io/nvidia/tritonserver:22.08-py3
+ARG BASE_IMAGE=nvcr.io/nvidia/tritonserver:22.09-py3
 FROM ${BASE_IMAGE}
 
 # disable terminal interaction for apt
 ENV DEBIAN_FRONTEND=noninteractive
 ENV SHELL /bin/bash
-SHELL ["/bin/bash", "-c"] 
+SHELL ["/bin/bash", "-c"]
 
 # NVIDIA repository keys: https://developer.nvidia.com/blog/updating-the-cuda-linux-gpg-repository-key/
 RUN apt-key del 7fa2af80 && mkdir -p /tmp && cd /tmp \
@@ -34,6 +34,7 @@ RUN apt-get update && apt-get install -y \
         curl \
         git \
         gnupg2 \
+        iputils-ping \
         locales \
         lsb-release \
         rsync \
@@ -54,7 +55,6 @@ RUN apt-get update && apt-get install -y \
         python3-pip \
         python3-pybind11 \
         python3-pytest-cov \
-        python3-setuptools \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
@@ -77,7 +77,7 @@ RUN apt-get update && apt-get install -y \
         python3-opencv \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
-        
+
 # Python3 (PIP)
 RUN python3 -m pip install -U \
         argcomplete \
@@ -114,17 +114,6 @@ RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/nul
     && apt-get install -y cmake=3.23.2-0kitware1ubuntu20.04.1 cmake-data=3.23.2-0kitware1ubuntu20.04.1 \
     && cmake --version \
 && rm -rf /var/lib/apt/lists/* \
-&& apt-get clean 
-
-# TensorRT 8
-RUN apt-get update && apt-get install -y \
-       libnvinfer8 \
-       libnvonnxparsers8 \
-       libnvparsers8 \
-       libnvinfer-plugin8 \
-       libnvinfer-bin \
-       python3-libnvinfer \       
-&& rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
 # Pytorch
@@ -138,7 +127,7 @@ ARG HAS_GPU="true"
 RUN if [ "$HAS_GPU" = "true" ]; then \
 	set -e ; \
         apt-key adv --fetch-key https://repo.download.nvidia.com/jetson/jetson-ota-public.asc ; \
-        add-apt-repository 'deb http://repo.download.nvidia.com/jetson/x86_64/focal r35.1 main' ; \
+        add-apt-repository 'deb http://repo.download.nvidia.com/jetson/x86_64/focal r35.2 main' ; \
         apt-get update ; \
         apt-get install libnvvpi2 vpi2-dev ; \
         rm -rf /var/lib/apt/lists/* ; \
@@ -170,7 +159,7 @@ RUN python3 -m pip install -U \
 
 # Upgrade libc to resolve vulnerabilities including CVE-2019-11477
 RUN apt-get update && apt-get install -y --only-upgrade \
-       linux-libc-dev \      
+       linux-libc-dev \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
@@ -188,3 +177,18 @@ RUN python3 -m pip install -U \
 
 # Resolve vulnerability in mailcap.py by removing it (CVE-2015-20107)
 RUN rm -f /opt/tritonserver/backends/dali/conda/envs/dalienv/lib/python3.8/mailcap.py
+
+# Remove any platform entangling dependencies
+RUN touch \
+    /usr/lib/x86_64-linux-gnu/libcuda.so \
+    /usr/lib/x86_64-linux-gnu/libnvcuvid.so \
+    /usr/lib/x86_64-linux-gnu/libnvidia.so \
+    /usr/lib/firmware \
+    /usr/local/cuda/compat/lib || true
+
+RUN rm -rf \
+    /usr/lib/x86_64-linux-gnu/libcuda.so* \
+    /usr/lib/x86_64-linux-gnu/libnvcuvid.so* \
+    /usr/lib/x86_64-linux-gnu/libnvidia-*.so* \
+    /usr/lib/firmware \
+    /usr/local/cuda/compat/lib || true
