--- a/isaac_ros_bi3d_interfaces/package.xml
+++ b/isaac_ros_bi3d_interfaces/package.xml
@@ -11,7 +11,7 @@ license agreement from NVIDIA CORPORATION is strictly prohibited.
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>isaac_ros_bi3d_interfaces</name>
-  <version>0.20.0</version>
+  <version>0.30.0</version>
   <description>Interfaces for Isaac ROS Bi3D</description>
 
   <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer>
@@ -23,6 +23,8 @@ license agreement from NVIDIA CORPORATION is strictly prohibited.
   <exec_depend>rosidl_default_runtime</exec_depend>
 
   <depend>std_msgs</depend>
+
+  <build_depend>isaac_ros_common</build_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
