--- a/isaac_ros_tensor_list_interfaces/package.xml
+++ b/isaac_ros_tensor_list_interfaces/package.xml
@@ -13,7 +13,7 @@ license agreement from NVIDIA CORPORATION is strictly prohibited.
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>isaac_ros_tensor_list_interfaces</name>
-  <version>0.20.0</version>
+  <version>0.30.0</version>
   <description>Interfaces for Isaac ROS tensor list</description>
 
   <maintainer email="cyc@nvidia.com">CY Chen</maintainer>
@@ -25,7 +25,9 @@ license agreement from NVIDIA CORPORATION is strictly prohibited.
   <exec_depend>rosidl_default_runtime</exec_depend>
 
   <depend>std_msgs</depend>
-  
+
+  <build_depend>isaac_ros_common</build_depend>
+
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
   <build_depend>rosidl_default_generators</build_depend>
 
