--- a/docker/Dockerfile.ros2_humble
+++ b/docker/Dockerfile.ros2_humble
@@ -185,6 +185,21 @@ RUN apt-get update && mkdir -p ${ROS_ROOT}/src && cd ${ROS_ROOT}/src \
     && source ${ROS_ROOT}/setup.bash && cd ${ROS_ROOT} \
     && rosdep install -y -r --ignore-src --from-paths src --rosdistro ${ROS_DISTRO} \
     && colcon build --merge-install --cmake-args -DCMAKE_BUILD_TYPE=RelWithDebInfo --packages-up-to image_proc \
+    && echo "image_pipeline https://github.com/ros-perception/image_pipeline/pull/786" >> ${ROS_ROOT}/VERSION \
+    && rm -Rf src build log \
+&& rm -rf /var/lib/apt/lists/* \
+&& apt-get clean
+
+# Install patched rclcpp package with backported multithreadedexecutor fix
+# https://github.com/ros2/rclcpp/commit/232262c02a1265830c7785b7547bd51e1124fcd8
+RUN apt-get update && mkdir -p ${ROS_ROOT}/src && cd ${ROS_ROOT}/src \
+    && git clone https://github.com/ros2/rclcpp.git && cd rclcpp && git checkout humble \
+    && git config user.email "builder@nvidia.com" && git config user.name "NVIDIA Builder" \
+    && git cherry-pick 232262c02a1265830c7785b7547bd51e1124fcd8 \
+    && source ${ROS_ROOT}/setup.bash && cd ${ROS_ROOT} \
+    && rosdep install -y -r --ignore-src --from-paths src --rosdistro ${ROS_DISTRO} \
+    && colcon build --merge-install --cmake-args -DCMAKE_BUILD_TYPE=RelWithDebInfo --packages-up-to rclcpp \
+    && echo "rclcpp https://github.com/ros2/rclcpp/commit/232262c02a1265830c7785b7547bd51e1124fcd8" >> ${ROS_ROOT}/VERSION \
     && rm -Rf src build log \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
