added platform and pip reqs for server start

--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -2,4 +2,4 @@ ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
 #install deps
-RUN pip3 install fastapi uvicorn[standard] python-socketio asyncio azure-iot-device
+RUN pip3 install fastapi uvicorn[standard] python-socketio asyncio azure-iot-device azure-storage-blob loguru 
