--- a/docker/Dockerfile.aarch64
+++ b/docker/Dockerfile.aarch64
@@ -7,7 +7,7 @@
 # license agreement from NVIDIA CORPORATION is strictly prohibited.
 
 # Docker file for aarch64 based Jetson device
-ARG BASE_IMAGE="nvcr.io/nvidia/l4t-base:r35.2.1"
+ARG BASE_IMAGE="nvcr.io/nvidia/l4t-base:35.4.1"
 FROM ${BASE_IMAGE}
 
 # Disable terminal interaction for apt
@@ -15,11 +15,18 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV SHELL /bin/bash
 SHELL ["/bin/bash", "-c"]
 
+# Ensure we have universe
+RUN apt-get update \
+        && apt-get install -y software-properties-common \
+        && add-apt-repository universe
+
 # Fundamentals
 RUN apt-get update && apt-get install -y \
     build-essential \
+    ca-certificates \
     curl \
     git \
+    gnupg2 \
     iputils-ping \
     lsb-release \
     sudo \
@@ -32,14 +39,12 @@ RUN apt-get update && apt-get install -y \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
-# Upgrade cmake to 3.23.2
+# Upgrade cmake to 3.22.1 to match Ubuntu 22.04
 RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null \
-    && echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' | sudo tee /etc/apt/sources.list.d/kitware.list >/dev/null \
+    && echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null \
     && apt-get update \
-    && rm /usr/share/keyrings/kitware-archive-keyring.gpg \
-    && apt-get install -y kitware-archive-keyring \
-    && apt-get remove cmake && apt-get purge cmake && apt-get remove cmake-data && apt-get purge cmake \
-    && apt-get install -y cmake=3.23.2-0kitware1ubuntu20.04.1 cmake-data=3.23.2-0kitware1ubuntu20.04.1 \
+    && apt-get remove -y cmake && apt-get purge -y cmake && apt-get remove -y cmake-data && apt-get purge -y cmake-data \
+    && apt-get install -y cmake=3.22.1-0kitware1ubuntu20.04.1 cmake-data=3.22.1-0kitware1ubuntu20.04.1 \
     && cmake --version \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
@@ -119,9 +124,10 @@ RUN curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.d
 
 # Install TensorRT and VPI
 RUN apt-get update && apt-get install -y \
-    tensorrt \
-    vpi2-dev \
-&& rm -rf /var/lib/apt/lists/* && apt-get clean
+        tensorrt \
+        vpi2-dev \
+&& rm -rf /var/lib/apt/lists/* \
+&& apt-get clean
 
 # Install tao-converter
 COPY tao/tao-converter-aarch64-tensorrt8.4.zip /opt/nvidia/tao/tao-converter-aarch64-tensorrt8.4.zip
@@ -214,9 +220,9 @@ RUN apt-get update && apt-get install -y --only-upgrade \
 RUN python3 -m pip install \
         protobuf==3.20.1
 
-# GPU usage monitoring on Jetson
-RUN python3 -m pip install -U \
-  jetson-stats
+# # GPU usage monitoring on Jetson
+# RUN python3 -m pip install -U \
+#   jetson-stats
 
 # Apply libcudacxx patch for fixing C++17 compilation errors in GXF
 COPY patches/libcudacxx_aarch64_cuda_11_4.diff /tmp/
