--- a/isaac_ros_nova_interfaces/package.xml
+++ b/isaac_ros_nova_interfaces/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
-Copyright (c) 2021, NVIDIA CORPORATION.  All rights reserved.
+Copyright (c) 2021-2022, NVIDIA CORPORATION.  All rights reserved.
 
 NVIDIA CORPORATION and its licensors retain all intellectual property
 and proprietary rights in and to this software, related documentation
@@ -12,21 +12,28 @@ license agreement from NVIDIA CORPORATION is strictly prohibited.
 
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>isaac_ros_common</name>
+  <name>isaac_ros_nova_interfaces</name>
   <version>2.0.0</version>
-  <description>Utilities for performing common functions in Isaac ROS packages</description>
+  <description>Interfaces for Isaac ROS Nova</description>
 
-  <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer>
+  <maintainer email="ashwinvk@nvidia.com">Ashwin Varghese Kuruttukulam</maintainer>
   <license>NVIDIA Isaac ROS Software License</license>
   <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
-  <author>Jaiveer Singh</author>
+  <author>Ashwin Varghese Kuruttukulam</author>
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <depend>std_msgs</depend>
+
+  <build_depend>isaac_ros_common</build_depend>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
-
-  <depend>rclcpp</depend>
+  <build_depend>rosidl_default_generators</build_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
     <build_type>ament_cmake</build_type>
