--- a/docker/Dockerfile.x86_64.ros2_humble
+++ b/docker/Dockerfile.x86_64.ros2_humble
@@ -7,3 +7,7 @@
 # license agreement from NVIDIA CORPORATION is strictly prohibited.
 
 FROM nvcr.io/nvidia/isaac/ros:x86_64-ros2_humble_f70fbf3e86d9ae99b527f8cc2c40007b
+
+# Fix kitware apt key
+RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null \
+    && echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null
