--- a/docker/Dockerfile.oak-d
+++ b/docker/Dockerfile.oak-d
@@ -1,6 +1,6 @@
-# Dockerfile for setting up Realsense driver
-#  https://github.com/jetsonhacks/installRealSenseSDK
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
+RUN wget -qO- https://docs.luxonis.com/install_dependencies.sh | bash
+RUN apt install -y libusb-1.0-0-dev
 RUN sudo wget -qO- https://raw.githubusercontent.com/luxonis/depthai-ros/main/install_dependencies.sh | sudo bash
