--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -3,9 +3,9 @@ FROM ${BASE_IMAGE}
 
 RUN apt-get update && apt-get install -y network-manager \
     && systemctl mask NetworkManager.service \
+    && apt-get install -y python3-serial-asyncio \
     && apt-get clean
 
 
 #install deps
 RUN pip3 install fastapi uvicorn[standard] python-socketio asyncio azure-iot-device azure-storage-blob loguru nmcli
-RUN apt-get install -y python3-serial-asyncio
