--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -3,6 +3,7 @@ FROM ${BASE_IMAGE}
 
 RUN apt-get update && apt-get install -y network-manager \
     && systemctl mask NetworkManager.service \
+    && apt-get install -y python3-serial-asyncio \
     && apt-get clean
 
 
