Add domain id and namespace (#13)
* Set ROS localhost only.

* Set ENV last.

* added domain id and namespace

* Add jq to the server.

* Load identity things.

* added env vars

* Update keep alive and remove localhost isolate flag.

* Revert change.

* Missed some conflicts

* Update entrypoint script

* Remove python script

* updated image publisher

* fixed defaults

* added workspace-entrypoint namespace slashes

* Update entrypoint

* Remove extra echos

* updated ros2_hmble dockerfile and ws

---------

Co-authored-by: Joey B <jbertalan@nilfisk.com>
Co-authored-by: Arteom Katkov <akatkov@nilfisk.com>

--- a/docker/Dockerfile.ros2_humble
+++ b/docker/Dockerfile.ros2_humble
@@ -128,6 +128,7 @@ RUN apt-get update && apt-get install -y ros-humble-ros-base \
     ros-humble-v4l2-camera \
     ros-humble-vision-opencv \
     ros-humble-vision-msgs \
+    ros-humble-rmw-fastrtps-cpp \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
 
