--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -1,7 +1,7 @@
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
-RUN apt-get update && apt-get install -y network-manager \
+RUN apt-get update && apt-get install -y network-manager jq \
     && systemctl mask NetworkManager.service \
     && apt-get install -y python3-serial-asyncio \
     && apt-get clean
