added entrypoint and packages to get mapping and saving running (#14)
* added entrypoint and packages to get mapping and saving running

* Update entrypoint script

* gitignored the config file and added patch for pyttest and ros

* fixed gitignore

* Add namespace to button sim

* set permissions for user

---------

Co-authored-by: Arteom Katkov <akatkov@nilfisk.com>

--- a/docker/Dockerfile.ros2_humble
+++ b/docker/Dockerfile.ros2_humble
@@ -223,5 +223,7 @@ RUN apt-get update && apt-get install -y \
     ros-humble-rqt-reconfigure \
     ros-humble-rviz-common \
     ros-humble-rviz-default-plugins \
+    ros-humble-pcl-ros \
+    ros-humble-xacro \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
