Add pybindingtools dependency for MoveIt Task Constructor

--- a/docker/Dockerfile.ros2_humble
+++ b/docker/Dockerfile.ros2_humble
@@ -204,6 +204,7 @@ apt-get update && apt-get install -y \
     ros-humble-moveit-servo \
     ros-humble-moveit-visual-tools \
     ros-humble-pluginlib \
+    ros-humble-py-binding-tools \
     ros-humble-robot-state-publisher \
     ros-humble-ros2-control \
     ros-humble-rviz-visual-tools \
