--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -1,13 +1,13 @@
 # run_dev.sh config
-CONFIG_IMAGE_KEY=ros2_humble
+CONFIG_IMAGE_KEY=ros2_humble.user.bag_data_extractor
 CONFIG_DOCKER_SEARCH_DIRS=/home/vschorp/dev/orx/orx_middleware/isaac_ros_common/docker
 BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
 ISAAC_ROS_WS=/home/vschorp/dev/orx/orx_middleware/ros2_ws
 
 # docker_deply.sh config
 # BASE_IMAGE_KEY=aarch64.ros2_humble.user.foxglove
-BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user
-DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-dgx-data_saver
+BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.bag_data_extractor
+DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-dgx-bag_data_extractor
 ROS_WS=/home/vschorp/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=data_saver
-LAUNCH_FILE=data_saver_launch.py
+LAUNCH_PACKAGE=bag_data_extractor
+LAUNCH_FILE=bag_data_extractor_launch.py
